# global-destruction-demo

./: CMakeLists.txt  README.md  exe.cpp  lib.cpp  lib.hpp
